<resources>
    <string name="app_name">QuizApp</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="vanshika">vanshikasethi521@gmail.com</string>
    <string name="facebook_page">Follow on Facebook</string>
    <string name="communication">Communication</string>
    <string name="nav_rate">Rate or Feedback</string>
    <string name="nav_share">Share</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_terms_conditions">Terms and Conditions</string>
    <string name="website">Visit Website</string>
    <string name="more">More</string>
    <string name="nav_logout">a</string>
    <string name="nav_LogOut">logout</string>

</resources>